--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+.loader{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(8, 8, 8);
+}
 .section__padding {
   padding: 4rem 6rem;
 }
@@ -151,7 +160,7 @@
   .section__padding {
     padding: 4rem 2rem;
   }
-  
+
   .p__cormorant {
     font-size: 21px;
   }
